--- a/popup/css/popup-stylesheet.css
+++ b/popup/css/popup-stylesheet.css
@@ -2,12 +2,12 @@
 	display: block;
 }
 
-.flex {
-	flex : 1;
+.gap {
+	gap: 16px;
 }
 
-.viewport {
-
+.flex {
+	flex : 1;
 }
 
 .flex-container {
@@ -22,46 +22,25 @@
 	flex-direction: row;
 }
 
-.popup-button {
-	background-color: aliceblue;
-	border: none;
-	border-radius: 4px;
 
-	margin-left: 25px;
-	margin-right: 25px;
-
-	font-size: 1.5em;
-	text-align: center;
-}
-
-.downward-box-shadow {
-	-webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
-	box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
-}
-
-.active-reset-button {
-	background-color: #FFC24B;
-}
 
 
 body {
 	background-color: #eaeaea;
 }
 
+button {
+	padding: 8px;
+}
 
 #popup-viewport {
 	width: 370px;
-	height: 400px;
+	height: auto;
+	overflow: hidden;
 }
 
 #hostname-container {
-	display: none;
-
-	width: 370px;
-	height: 25px;
-	
-	margin-bottom: 5px;
+	margin-bottom: 8px;
 
 	font-size: 1em;
 
@@ -69,6 +48,7 @@ body {
 	
 	border: 1px solid black;
 	border-radius: 4px;
+	padding: 4px;
 }
 
 #textbox-container {
@@ -80,21 +60,12 @@ body {
 	width: 370px;
 	height: 310px;
 
-	margin-bottom: 10px;
+	margin-bottom: 8px;
 
 	background-color: #230000;
 	color: #ebffe0;
 }
 
 #controls-container {
-	padding: 10px;
-}
-
-#reset-button {
-	border: 1px solid #FFC24B;
-	background-color none: 
-}
-
-#apply-button {
-	background-color: #8EFF68;
+	padding: 16px 8px;
 }
